// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateSCAPPolicy expect to render without error 1`] = `
<StateViewWithError
  stateValues={
    {
      "data": {},
      "error": false,
      "loading": false,
    }
  }
>
  <StateViewPart
    stateKey="loading"
  >
    <Spinner />
  </StateViewPart>
  <StateViewPart
    stateKey="data"
  >
    <TextContent>
      <Text
        className="pf-u-mb-md"
        component="h1"
      >
        Create SCAP policy
      </Text>
      <Text
        className="pf-u-mb-md"
      >
        Select the operating system and policy type for this policy.
      </Text>
    </TextContent>
    <Form>
      <FormGroup
        fieldId="benchmark"
        isRequired={true}
        label="Operating system"
      />
    </Form>
  </StateViewPart>
</StateViewWithError>
`;

exports[`CreateSCAPPolicy should render a spinner while loading 1`] = `
<StateViewWithError
  stateValues={
    {
      "data": {},
      "error": false,
      "loading": true,
    }
  }
>
  <StateViewPart
    stateKey="loading"
  >
    <Spinner />
  </StateViewPart>
  <StateViewPart
    stateKey="data"
  >
    <TextContent>
      <Text
        className="pf-u-mb-md"
        component="h1"
      >
        Create SCAP policy
      </Text>
      <Text
        className="pf-u-mb-md"
      >
        Select the operating system and policy type for this policy.
      </Text>
    </TextContent>
    <Form>
      <FormGroup
        fieldId="benchmark"
        isRequired={true}
        label="Operating system"
      />
    </Form>
  </StateViewPart>
</StateViewWithError>
`;

exports[`CreateSCAPPolicy should render benchmarks and no policies until one is selected 1`] = `
<StateViewWithError
  stateValues={
    {
      "data": {
        "osMajorVersions": {
          "edges": [
            {
              "node": {
                "osMajorVersion": 6,
                "profiles": {
                  "edges": [
                    {
                      "benchmark": {
                        "id": "6-benchmark-id",
                        "osMajorVersion": 6,
                        "refId": "6-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #0",
                      "osMajorVersion": 0,
                      "refId": "xccdf_org.ssgproject.content_profile_0",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "6.1",
                        "6.2",
                        "6.3",
                        "6.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "6-benchmark-id",
                        "osMajorVersion": 6,
                        "refId": "6-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #1",
                      "osMajorVersion": 1,
                      "refId": "xccdf_org.ssgproject.content_profile_1",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "6.1",
                        "6.2",
                        "6.3",
                        "6.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "6-benchmark-id",
                        "osMajorVersion": 6,
                        "refId": "6-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #2",
                      "osMajorVersion": 2,
                      "refId": "xccdf_org.ssgproject.content_profile_2",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "6.1",
                        "6.2",
                        "6.3",
                        "6.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "6-benchmark-id",
                        "osMajorVersion": 6,
                        "refId": "6-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #3",
                      "osMajorVersion": 3,
                      "refId": "xccdf_org.ssgproject.content_profile_3",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "6.1",
                        "6.2",
                        "6.3",
                        "6.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "6-benchmark-id",
                        "osMajorVersion": 6,
                        "refId": "6-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #4",
                      "osMajorVersion": 4,
                      "refId": "xccdf_org.ssgproject.content_profile_4",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "6.1",
                        "6.2",
                        "6.3",
                        "6.4",
                      ],
                    },
                  ],
                },
              },
            },
            {
              "node": {
                "osMajorVersion": 7,
                "profiles": {
                  "edges": [
                    {
                      "benchmark": {
                        "id": "7-benchmark-id",
                        "osMajorVersion": 7,
                        "refId": "7-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #0",
                      "osMajorVersion": 0,
                      "refId": "xccdf_org.ssgproject.content_profile_0",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "7.1",
                        "7.2",
                        "7.3",
                        "7.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "7-benchmark-id",
                        "osMajorVersion": 7,
                        "refId": "7-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #1",
                      "osMajorVersion": 1,
                      "refId": "xccdf_org.ssgproject.content_profile_1",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "7.1",
                        "7.2",
                        "7.3",
                        "7.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "7-benchmark-id",
                        "osMajorVersion": 7,
                        "refId": "7-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #2",
                      "osMajorVersion": 2,
                      "refId": "xccdf_org.ssgproject.content_profile_2",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "7.1",
                        "7.2",
                        "7.3",
                        "7.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "7-benchmark-id",
                        "osMajorVersion": 7,
                        "refId": "7-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #3",
                      "osMajorVersion": 3,
                      "refId": "xccdf_org.ssgproject.content_profile_3",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "7.1",
                        "7.2",
                        "7.3",
                        "7.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "7-benchmark-id",
                        "osMajorVersion": 7,
                        "refId": "7-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #4",
                      "osMajorVersion": 4,
                      "refId": "xccdf_org.ssgproject.content_profile_4",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "7.1",
                        "7.2",
                        "7.3",
                        "7.4",
                      ],
                    },
                  ],
                },
              },
            },
            {
              "node": {
                "osMajorVersion": 8,
                "profiles": {
                  "edges": [
                    {
                      "benchmark": {
                        "id": "8-benchmark-id",
                        "osMajorVersion": 8,
                        "refId": "8-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #0",
                      "osMajorVersion": 0,
                      "refId": "xccdf_org.ssgproject.content_profile_0",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "8.1",
                        "8.2",
                        "8.3",
                        "8.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "8-benchmark-id",
                        "osMajorVersion": 8,
                        "refId": "8-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #1",
                      "osMajorVersion": 1,
                      "refId": "xccdf_org.ssgproject.content_profile_1",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "8.1",
                        "8.2",
                        "8.3",
                        "8.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "8-benchmark-id",
                        "osMajorVersion": 8,
                        "refId": "8-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #2",
                      "osMajorVersion": 2,
                      "refId": "xccdf_org.ssgproject.content_profile_2",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "8.1",
                        "8.2",
                        "8.3",
                        "8.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "8-benchmark-id",
                        "osMajorVersion": 8,
                        "refId": "8-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #3",
                      "osMajorVersion": 3,
                      "refId": "xccdf_org.ssgproject.content_profile_3",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "8.1",
                        "8.2",
                        "8.3",
                        "8.4",
                      ],
                    },
                    {
                      "benchmark": {
                        "id": "8-benchmark-id",
                        "osMajorVersion": 8,
                        "refId": "8-benchmark-refId",
                      },
                      "compliant": true,
                      "lastScanned": 2021-08-31T00:00:00.000Z,
                      "name": "Test Result Profile #4",
                      "osMajorVersion": 4,
                      "refId": "xccdf_org.ssgproject.content_profile_4",
                      "rules": [
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_0",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #0",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_1",
                          "remediationAvailable": true,
                          "severity": "medium",
                          "title": "Profile #0 Rule #1",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_2",
                          "remediationAvailable": true,
                          "severity": "low",
                          "title": "Profile #0 Rule #2",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_3",
                          "remediationAvailable": true,
                          "severity": "unknown",
                          "title": "Profile #0 Rule #3",
                        },
                        {
                          "compliant": true,
                          "precedence": 0,
                          "refId": "xccdf_org.ssgproject.profile_0_rule_4",
                          "remediationAvailable": true,
                          "severity": "high",
                          "title": "Profile #0 Rule #4",
                        },
                      ],
                      "supported": true,
                      "supportedOsVersions": [
                        "8.1",
                        "8.2",
                        "8.3",
                        "8.4",
                      ],
                    },
                  ],
                },
              },
            },
          ],
        },
      },
      "error": false,
      "loading": false,
    }
  }
>
  <StateViewPart
    stateKey="loading"
  >
    <Spinner />
  </StateViewPart>
  <StateViewPart
    stateKey="data"
  >
    <TextContent>
      <Text
        className="pf-u-mb-md"
        component="h1"
      >
        Create SCAP policy
      </Text>
      <Text
        className="pf-u-mb-md"
      >
        Select the operating system and policy type for this policy.
      </Text>
    </TextContent>
    <Form>
      <FormGroup
        fieldId="benchmark"
        isRequired={true}
        label="Operating system"
      >
        <Tile
          className="pf-u-mr-md"
          isSelected={false}
          isStacked={true}
          key="rhel6-select"
          onClick={[Function]}
          title="RHEL 6"
        />
        <Tile
          className="pf-u-mr-md"
          isSelected={false}
          isStacked={true}
          key="rhel7-select"
          onClick={[Function]}
          title="RHEL 7"
        />
        <Tile
          className="pf-u-mr-md"
          isSelected={false}
          isStacked={true}
          key="rhel8-select"
          onClick={[Function]}
          title="RHEL 8"
        />
      </FormGroup>
    </Form>
  </StateViewPart>
</StateViewWithError>
`;

exports[`CreateSCAPPolicy should render policies from the selected benchmark only 1`] = `
[
  <div
    aria-selected={false}
    className="pf-c-tile pf-u-mr-md"
    onClick={[Function]}
    role="option"
    tabIndex={0}
  >
    <div
      className="pf-c-tile__header pf-m-stacked"
    >
      <div
        className="pf-c-tile__title"
      >
        RHEL 6
      </div>
    </div>
  </div>,
  <div
    aria-selected={false}
    className="pf-c-tile pf-u-mr-md"
    onClick={[Function]}
    role="option"
    tabIndex={0}
  >
    <div
      className="pf-c-tile__header pf-m-stacked"
    >
      <div
        className="pf-c-tile__title"
      >
        RHEL 7
      </div>
    </div>
  </div>,
  <div
    aria-selected={false}
    className="pf-c-tile pf-u-mr-md"
    onClick={[Function]}
    role="option"
    tabIndex={0}
  >
    <div
      className="pf-c-tile__header pf-m-stacked"
    >
      <div
        className="pf-c-tile__title"
      >
        RHEL 8
      </div>
    </div>
  </div>,
]
`;

exports[`CreateSCAPPolicy should render policies from the selected benchmark only 2`] = `null`;
